# AWS-EC2-Word-Count

./: CMakeLists.txt  ReadME.md
Files/: Edwin A. Abbott - Flatlandia.txt  George Orwell - 1984.txt  Italo Calvino - Il visconte dimezzato.txt
include/: file_utils.h  frequency_list.h  mpi_utils.h  schedule.h
src/: file_utils.c  frequency_list.c  mpi_utils.c  schedule.c  word-count.c
